AP-20926: improve UI and description consistency between Google/MS nodes
AP-20926 (Google Authenticator: Revise scopes and add custom client ID)